aula fontes e cores

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,18 @@
     <link rel="stylesheet" href="./tailwind.css">
     <title>Curso Tailwind</title>
 </head>
+
 <body class="bg-gray-100">
+    <h2 class="text-sm text-gray-500">Hello World</h2>
+    <h2 class="text-base text-red-800">Hello World</h2>
+    <h2 class="text-lg text-yellow-400">Hello World</h2>
+    <h2 class="text-xl tracking-widest">Hello World</h2>
+    <h2 class="text-2xl font-black">Hello World</h2>
+    <p class="text-center">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, velit nemo! Ipsum doloribus repudiandae, quas
+        nostrum reprehenderit possimus soluta, inventore nemo non quod eveniet quaerat sed totam exercitationem adipisci
+        deleniti.
+    </p>
 </body>
+
 </html>
