--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,25 @@
     <link rel="stylesheet" href="./tailwind.css">
     <title>Curso Tailwind</title>
 </head>
+
 <body class="bg-gray-100">
+    <div class="p-4 m-4">
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti natus saepe tenetur libero eaque neque,
+        officiis sunt explicabo harum earum fugit mollitia reprehenderit cumque deserunt perferendis repellendus odit!
+        Officia, inventore!
+    </div>
+
+    <div class="m-4 space-y-4">
+        <div>1</div>
+        <div>2</div>
+        <div>3</div>
+    </div>
+
+    <div class="m-4 space-x-4">
+        <span>1</span>
+        <span>2</span>
+        <span>3</span>
+    </div>
 </body>
+
 </html>
