--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,29 @@
     <link rel="stylesheet" href="./tailwind.css">
     <title>Curso Tailwind</title>
 </head>
+
 <body class="bg-gray-100">
+    <div class="m-5 p-4 border-2 border-yellow-400">
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi vero explicabo vel tempora perspiciatis eos
+        blanditiis, doloribus error aperiam quis repudiandae quos, ipsa sit? In asperiores velit facilis libero quos.
+    </div>
+    <div class="m-5 p-4 border-l-2 border-yellow-400">
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi vero explicabo vel tempora perspiciatis eos
+        blanditiis, doloribus error aperiam quis repudiandae quos, ipsa sit? In asperiores velit facilis libero quos.
+    </div>
+    <div class="m-5 p-4 border-r-2 border-yellow-400">
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi vero explicabo vel tempora perspiciatis eos
+        blanditiis, doloribus error aperiam quis repudiandae quos, ipsa sit? In asperiores velit facilis libero quos.
+    </div>
+
+    <div class="m-5 p-4 border-2 border-black rounded-md">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur molestias eos ullam impedit dignissimos
+        dicta, provident hic corrupti ad tempore ipsa quisquam similique unde officia, amet esse error, saepe possimus!
+
+        <br>
+
+        <button class="bg-blue-400 px-4 py-1 rounded text-white ring-2">Save</button>
+    </div>
 </body>
+
 </html>
