--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,24 @@
     <link rel="stylesheet" href="./tailwind.css">
     <title>Curso Tailwind</title>
 </head>
+
 <body class="bg-gray-100">
+    <div class="m-5 p-4 bg-blue-900 bg-opacity-20">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor cum commodi rem reprehenderit quis voluptas.
+        Dignissimos suscipit vero, labore minus, eveniet inventore rerum voluptas sunt amet temporibus ut est nulla?
+    </div>
+
+    <div class="m-5 p-4 bg-gradient-to-b from-blue-200 via-blue-400 to-blue-600">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, enim sequi dolore fuga minus harum neque quasi
+        esse architecto tenetur dolor libero consequatur reprehenderit quisquam ex? Accusamus suscipit veritatis
+        dolores.
+    </div>
+
+    <div class="m-5 p-4 text-white bg-gradient-to-bl from-gray-900 via-gray-700 to-gray-500">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, enim sequi dolore fuga minus harum neque quasi
+        esse architecto tenetur dolor libero consequatur reprehenderit quisquam ex? Accusamus suscipit veritatis
+        dolores.
+    </div>
 </body>
+
 </html>
