--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,12 @@
     <link rel="stylesheet" href="./tailwind.css">
     <title>Curso Tailwind</title>
 </head>
-<body class="bg-gray-100">
+
+<body class="bg-gray-100 h-screen">
+    <div class="w-screen h-screen p-5 bg-gradient-to-b from-yellow-400 via-gray-200 to-blue-400">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium laudantium ut eaque est. Similique odit
+        numquam, quo corporis rerum unde assumenda non corrupti placeat dolorum deleniti id a itaque fuga.
+    </div>
 </body>
+
 </html>
