--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,19 @@
     <link rel="stylesheet" href="./tailwind.css">
     <title>Curso Tailwind</title>
 </head>
+
 <body class="bg-gray-100">
+    <div class="grid grid-cols-3 gap-4 h-48">
+        <div class="bg-blue-400"></div>
+        <div class="bg-red-400"></div>
+        <div class="bg-yellow-400"></div>
+        <div class="bg-blue-400"></div>
+        <div class="bg-red-400"></div>
+        <div class="bg-yellow-400"></div>
+        <div class="col-span-2 bg-blue-400"></div>
+        <div class="bg-red-400"></div>
+        <div class="bg-yellow-400"></div>
+    </div>
 </body>
+
 </html>
