--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./tailwind.css">
     <title>Curso Tailwind</title>
 </head>
-<body class="bg-gray-100">
+<body class="bg-gray-300 sm:bg-red-300">
+    <h1 class="text-sm sm:text-base md:text-xl lg:text-2xl">Hello World </h1>
 </body>
 </html>
