aula estados(hover, focus, etc)

--- a/index.html
+++ b/index.html
@@ -8,5 +8,15 @@
     <title>Curso Tailwind</title>
 </head>
 <body class="bg-gray-100">
+    <h1 class="text-gray-300 hover:text-gray-800 hover:underline">Hello World</h1>
+
+    <div class="group w-72 bg-gray-300 p-4">
+        <h4 class="font-bold group-hover:text-blue-300">Titulo do card</h4>
+        <p class="text-gray-500 group-hover:text-gray-800 text-sm">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+    </div>
+
+    <br>
+
+    <input type="text" class="bg-gray-300 hover:bg-gray-200 text-lg px-4 py-2 focus:text-red-300">
 </body>
 </html>
