--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="dark">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,13 @@
     <link rel="stylesheet" href="./tailwind.css">
     <title>Curso Tailwind</title>
 </head>
-<body class="bg-gray-100">
+
+<body class="bg-gray-100 dark:bg-gray-800">
+    <div class="p-4 m-4 text-white">
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora tenetur aliquid nostrum reprehenderit
+        nesciunt. Ab, distinctio laboriosam error qui enim pariatur consectetur, minima provident quaerat eos minus
+        accusamus, mollitia inventore?
+    </div>
 </body>
+
 </html>
