aula component button

--- a/index.html
+++ b/index.html
@@ -8,5 +8,13 @@
     <title>Curso Tailwind</title>
 </head>
 <body class="bg-gray-100">
+    <div class="container space-x-8 mx-auto px-4 py-8">
+        <div>
+            <h6 class="font-bold mb-2">Component Button</h6>
+            <button class="bg-red-500 px-4 py-1 hover:bg-blue-600 rounded text-white shadow-md">Cancel</button>
+            <button class="bg-blue-500 px-6 py-2 hover:bg-blue-600 rounded text-white shadow-md">Save</button>
+            <button class="bg-green-500 px-8 py-3 hover:bg-blue-600 rounded text-white shadow-md">Edit</button>
+        </div>
+    </div>
 </body>
 </html>
