aula component badge

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,43 @@
     <link rel="stylesheet" href="./tailwind.css">
     <title>Curso Tailwind</title>
 </head>
+
 <body class="bg-gray-100">
+    <div class="container mx-auto px-4 py-8">
+        <div class="space-y-6">
+            <h6 class="font-bold mb-2">Component Badge/Tag</h6>
+            <div>
+                <div
+                    class="inline-flex item-center text-sm bg-green-100 px-1.5 py-0.5 rounded-md text-green-800 font-medium">
+                    Ativo
+                </div>
+                <div
+                    class="inline-flex item-center text-sm bg-green-100 px-1.5 py-0.5 rounded-full text-green-800 font-medium">
+                    Ativo
+                </div>
+            </div>
+            <div>
+                <div
+                    class="inline-flex item-center text-sm bg-red-100 px-1.5 py-0.5 rounded-md text-red-800 font-medium">
+                    Inativo
+                </div>
+                <div
+                    class="inline-flex item-center text-sm bg-red-100 px-1.5 py-0.5 rounded-full text-red-800 font-medium">
+                    Inativo
+                </div>
+            </div>
+            <div>
+                <div
+                    class="inline-flex item-center text-sm bg-yellow-100 px-1.5 py-0.5 rounded-md text-yellow-800 font-medium">
+                    Em progresso
+                </div>
+                <div
+                    class="inline-flex item-center text-sm bg-yellow-100 px-1.5 py-0.5 rounded-full text-yellow-800 font-medium">
+                    Em progresso
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
