aula component input

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,33 @@
     <link rel="stylesheet" href="./tailwind.css">
     <title>Curso Tailwind</title>
 </head>
+
 <body class="bg-gray-100">
+    <div class="container mx-auto px-4 py-8">
+        <div class="space-y-4">
+            <h6 class="font-bold mb-2">Component Input</h6>
+            <input 
+                type="text"
+                placeholder="Digite seu nome" 
+                class=" w-full bg-gray-50 border border-gray-300 focus:border-blue-500 rounded px-2 py-1 text-sm text-gray-800 placeholder-gray-300 focus:outline-none"
+            >
+            <input 
+                type="text"
+                placeholder="Digite seu nome" 
+                class=" w-full bg-gray-50 border border-gray-300 focus:border-blue-500 rounded px-3 py-2 text-base text-gray-800 placeholder-gray-300 focus:outline-none"
+            >
+            <input 
+                type="text"
+                placeholder="Digite seu nome" 
+                class=" w-full bg-gray-50 border border-gray-300 focus:border-blue-500 rounded px-4 py-3 text-xl text-gray-800 placeholder-gray-300 focus:outline-none"
+            >
+            <input 
+                type="text"
+                placeholder="Digite seu nome" 
+                class=" w-full bg-gray-50 border border-gray-300 focus:ring-2 focus:ring-blue-500 focus:ring-opacity-20 focus:border-blue-500 rounded px-4 py-3 text-xl text-gray-800 placeholder-gray-300 focus:outline-none transition transition-duration-500 ease-in-out"
+            >
+        </div>
+    </div>
 </body>
+
 </html>
