--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,54 @@
     <link rel="stylesheet" href="./tailwind.css">
     <title>Curso Tailwind</title>
 </head>
-<body class="bg-gray-100">
+
+<body class="bg-gray-50">
+    <div class="container mx-auto px-4 py-8">
+        <div>
+            <h6 class="font-bold mb-2">Component DropDown</h6>
+            <div class="relative">
+                <button class="flex items-center bg-white border border-gray-300 rounded px-3 py-1 text-sm text-gray-800 shadow">
+                    Botão
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                        stroke="currentColor" class="w-4 h-4 ml-2">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5" />
+                    </svg>
+                </button>
+                <div class="absolute bg-white border border-gray-200 py-1 shadow-md rounded space-y-2" style="width: 200px;">
+                    <a 
+                        href=""
+                        class="block text-sm text-gray-500 px-3 py-1 bg-white hover:bg-gray-100"
+                    >
+                        Link 1
+                    </a>
+                    <a 
+                        href=""
+                        class="block text-sm text-gray-500 px-3 py-1 bg-white hover:bg-gray-100"
+                    >
+                        Link 2
+                    </a>
+                    <a 
+                        href=""
+                        class="block text-sm text-gray-500 px-3 py-1 bg-white hover:bg-gray-100"
+                    >
+                        Link 3
+                    </a>
+                    <a 
+                        href=""
+                        class="block text-sm text-gray-500 px-3 py-1 bg-white hover:bg-gray-100"
+                    >
+                        Link 4
+                    </a>
+                    <a 
+                        href=""
+                        class="block text-sm text-gray-500 px-3 py-1 bg-white hover:bg-gray-100"
+                    >
+                        Link 5
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
