--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,27 @@
     <link rel="stylesheet" href="./tailwind.css">
     <title>Projeto Página de Hotel</title>
 </head>
-<body class="bg-gray-100">
+
+<body class="bg-gray-50">
+    <!-- Header -->
+    <div>
+        <div class="container mx-auto px-4 h-24 flex items-center">
+            <div class="font-black">
+                LOGO
+            </div>
+
+            <ul class="ml-auto">
+                <li class="space-x-4">
+                    <a href="" class="text-sm text-gray-600 hover:text-gray-800 hover:underline">Como reservar</a>
+                    <a href="" class="text-sm text-gray-600 hover:text-gray-800 hover:underline">Sobre nós</a>
+                    <a href="" class="text-sm text-gray-600 hover:text-gray-800 hover:underline">Informações</a>
+                    <a href="" class="text-sm text-gray-600 hover:text-gray-800 hover:underline">Contato</a>
+                </li>
+            </ul>
+
+        </div>
+    </div>
+    <!-- /Header -->
 </body>
+
 </html>
