--- a/index.html
+++ b/index.html
@@ -17,11 +17,17 @@
                 LOGO
             </div>
 
-            <ul class="ml-auto">
-                <li class="space-x-4">
+            <ul class="flex items-center ml-auto space-x-4">
+                <li>
                     <a href="" class="text-sm text-gray-600 hover:text-gray-800 hover:underline">Como reservar</a>
+                </li>
+                <li>
                     <a href="" class="text-sm text-gray-600 hover:text-gray-800 hover:underline">Sobre nós</a>
+                </li>
+                <li>
                     <a href="" class="text-sm text-gray-600 hover:text-gray-800 hover:underline">Informações</a>
+                </li>
+                <li>
                     <a href="" class="text-sm text-gray-600 hover:text-gray-800 hover:underline">Contato</a>
                 </li>
             </ul>
@@ -29,6 +35,37 @@
         </div>
     </div>
     <!-- /Header -->
+
+    <!-- Banner -->
+    <div style="background-image: url('./img/hero-image-1.png'); height: 450px;">
+        <div class="container mx-auto px-4 h-full flex items-center justify-center">
+            <div>
+                <div class="text-center">
+                    <h1 class="text-gray-200 text-3xl mb-1">Onde você quer ir?</h1>
+                    <p class="text-green-50">Escolha o estado e cidade para achar os melhores resorts</p>
+                </div>
+
+
+                <div class="mt-7">
+                    <form action="" class="space-x-4">
+                        <select name="" id="" class="bg-gray-50 px-3 py-2 border border-gray-300 rounded text-gray-500">
+                            <option value="">Escolha o estado</option>
+                        </select>
+                        <select name="" id="" class="bg-gray-50 px-3 py-2 border border-gray-300 rounded text-gray-500">
+                            <option value="">Escolha cidade</option>
+                        </select>
+                        <button class="inline-flex items-center text-gray-800 bg-yellow-600 font-md px-3 py-2 rounded">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4 mr-2">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M21 21l-5.197-5.197m0 0A7.5 7.5 0 105.196 5.196a7.5 7.5 0 0010.607 10.607z" />
+                              </svg>                              
+                            Pesquisar resorts
+                        </button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- /Banner -->
 </body>
 
 </html>
