--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Projeto Página de Hotel</title>
 </head>
 
-<body class="bg-gray-50">
+<body class="bg-gray-50 text-gray-600">
     <!-- Header -->
     <div>
         <div class="container mx-auto px-4 h-24 flex items-center">
@@ -55,9 +55,11 @@
                             <option value="">Escolha cidade</option>
                         </select>
                         <button class="inline-flex items-center text-gray-800 bg-yellow-600 font-md px-3 py-2 rounded">
-                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4 mr-2">
-                                <path stroke-linecap="round" stroke-linejoin="round" d="M21 21l-5.197-5.197m0 0A7.5 7.5 0 105.196 5.196a7.5 7.5 0 0010.607 10.607z" />
-                              </svg>                              
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                                stroke="currentColor" class="w-4 h-4 mr-2">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="M21 21l-5.197-5.197m0 0A7.5 7.5 0 105.196 5.196a7.5 7.5 0 0010.607 10.607z" />
+                            </svg>
                             Pesquisar resorts
                         </button>
                     </form>
@@ -66,6 +68,43 @@
         </div>
     </div>
     <!-- /Banner -->
+
+    <!-- Featured resort-->
+    <div>
+        <div class="container mx-auto px-4 py-14">
+            <div class="flex">
+                <div class="pr-10">
+                    <div class="text-sm text-gray-400 font-medium">RESORT EM DESTAQUE</div>
+                    <div class="text-2xl text-gray-600">Ecoresort Praia do Forte Bahia</div>
+                    <div class="text-sm text-gray-400 font-medium mt-2">Hotel qualidade 5 estrelas</div>
+                    <div class="text-sm text-gray-400 font-medium mt-4">
+                        <p class="mb-4">
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quibusdam reprehenderit accusamus
+                            voluptas illum dolor nisi molestiae aliquam eligendi qui commodi sed, dolorum sunt,
+                            obcaecati inventore dignissimos harum. Ipsum, impedit dicta.
+                        </p>
+                        <p>
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quibusdam reprehenderit accusamus
+                            voluptas illum dolor nisi molestiae aliquam eligendi qui commodi sed, dolorum sunt,
+                            obcaecati inventore dignissimos harum. Ipsum, impedit dicta.
+                        </p>
+                        <div class="mt-4">
+                            <a href class="inline-flex items-center text-gray-800 bg-yellow-600 font-md px-3 py-2 rounded">
+                                Solicitar Reserva
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4 ml-3">
+                                    <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 8.25L21 12m0 0l-3.75 3.75M21 12H3" />
+                                </svg>                              
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="flex-shrink-0 ml-auto">
+                    <img src="./img/featured-img.png" width="450" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- /Featured resort -->
 </body>
 
 </html>
