--- a/index.html
+++ b/index.html
@@ -105,6 +105,36 @@
         </div>
     </div>
     <!-- /Featured resort -->
-</body>
 
+    <!-- Resorts Grid -->
+    <div>
+        <div class="container mx-auto px-4">
+            <h3 class="text-2xl text-gray-500 font-semibold text-center mb-8">Conheça mais resorts</h3>
+
+            <div class="grid grid-cols-4 grid-rows-2 gap-6 h-96">
+                <div class="relative col-span-2 row-span-2 rounded-md overflow-hidden">
+                    <div class="absolute bottom-0 pl-4 pb-4 text-white font-bold z-20">Beach Park Resort</div>
+                    <img src="./img/image-shadow.png" class="absolute bottom-0 left-0 right-0 h-20 z-10" alt="">
+                    <img src="./img/hotel-1.jpeg" class="w-full h-full object-cover" alt="">
+                </div>
+                <div class="relative col-span-2 rounded-md overflow-hidden">
+                    <div class="absolute bottom-0 pl-4 pb-4 text-white font-bold z-20">Salinas do Maragogi Resort</div>
+                    <img src="./img/image-shadow.png" class="absolute bottom-0 left-0 right-0 h-20 z-10" alt="">
+                    <img src="./img/hotel-2.jpeg" class="w-full h-full object-cover" alt="">
+                </div>
+                <div class="relative rounded-md overflow-hidden">
+                    <div class="absolute bottom-0 pl-4 pb-4 text-white font-bold z-20">Grand Palladium</div>
+                    <img src="./img/image-shadow.png" class="absolute bottom-0 left-0 right-0 h-20 z-10" alt="">
+                    <img src="./img/hotel-3.jpeg" class="w-full h-full object-cover" alt="">
+                </div>
+                <div class="relative rounded-md overflow-hidden">
+                    <div class="absolute bottom-0 pl-4 pb-4 text-white font-bold z-20">Arraial d'Ajuda Eco Resort</div>
+                    <img src="./img/image-shadow.png" class="absolute bottom-0 left-0 right-0 h-20 z-10" alt="">
+                    <img src="./img/hotel-4.jpeg" class="w-full h-full object-cover" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- /Resorts Grid -->
+</body>
 </html>
