--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body class="bg-gray-50 text-gray-600">
     <!-- Header -->
     <div>
-        <div class="container mx-auto px-4 h-24 flex items-center">
+        <div class="container max-w-5xl mx-auto px-4 h-24 flex items-center">
             <div class="font-black">
                 LOGO
             </div>
@@ -71,9 +71,9 @@
 
     <!-- Featured resort-->
     <div>
-        <div class="container mx-auto px-4 py-14">
-            <div class="flex">
-                <div class="pr-10">
+        <div class="container max-w-5xl mx-auto px-4 py-14">
+            <div class="flex flex-col-reverse">
+                <div class="lg:pr-10">
                     <div class="text-sm text-gray-400 font-medium">RESORT EM DESTAQUE</div>
                     <div class="text-2xl text-gray-600">Ecoresort Praia do Forte Bahia</div>
                     <div class="text-sm text-gray-400 font-medium mt-2">Hotel qualidade 5 estrelas</div>
@@ -108,7 +108,7 @@
 
     <!-- Resorts Grid -->
     <div>
-        <div class="container mx-auto px-4">
+        <div class="container max-w-5xl mx-auto px-4">
             <h3 class="text-2xl text-gray-500 font-semibold text-center mb-8">Conheça mais resorts</h3>
 
             <div class="grid grid-cols-4 grid-rows-2 gap-6 h-96">
@@ -136,5 +136,42 @@
         </div>
     </div>
     <!-- /Resorts Grid -->
+
+    <!-- Form search -->
+    <div class="py-20">
+        <div class="container max-w-5xl mx-auto px-4 flex justify-center">
+            <form action="" class="space-x-4">
+                <select name="" id="" class="bg-gray-50 px-3 py-2 border border-gray-300 rounded text-gray-500">
+                    <option value="">Escolha o estado</option>
+                </select>
+                <select name="" id="" class="bg-gray-50 px-3 py-2 border border-gray-300 rounded text-gray-500">
+                    <option value="">Escolha cidade</option>
+                </select>
+                <button class="inline-flex items-center text-gray-800 bg-yellow-600 font-md px-3 py-2 rounded">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                        stroke="currentColor" class="w-4 h-4 mr-2">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                            d="M21 21l-5.197-5.197m0 0A7.5 7.5 0 105.196 5.196a7.5 7.5 0 0010.607 10.607z" />
+                    </svg>
+                    Pesquisar resorts
+                </button>
+            </form>
+        </div>
+    </div>
+    <!-- /Form search -->
+
+    <!-- Footer -->
+    <div class="border-t border-gray-200">
+        <div class="container max-w-5xl mx-auto px-4 py-4 flex items-center justify-between">
+            <div class="text-gray-400 font-black">
+                LOGO
+            </div>
+            <div class="flex items-center space-x-3">
+                <a href=""><img src="./img/icon-facebook.png" alt=""></a>
+                <a href=""><img src="./img/icon-instagram.png" alt=""></a>
+            </div>
+        </div>
+    </div>
+    <!-- /Footer -->
 </body>
 </html>
